--- a/packages/examplesVue/package.json
+++ b/packages/examplesVue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animations",
+  "name": "examples",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "esobjs-xe2-plugin": "^0.1.13-0.2",
+    "smplotting-xe2-plugin": "^0.1.3",
+    "vue": "^3.5.13",
+    "vue-xe2-plugin": "^0.1.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "less": "^4.2.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.1",
+    "vite-plugin-externals": "^0.6.2",
+    "vite-plugin-static-copy": "^2.2.0",
     "vue-tsc": "^2.1.10"
   }
 }
