--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hztx/core": "workspace:^",
     "antd": "^5.23.0",
+    "animejs": "3.2.2",
     "cesium": "^1.125.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
