--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@hztx/core": "workspace:^",
-    "antd": "^5.23.0",
     "animejs": "3.2.2",
+    "antd": "^5.23.0",
     "cesium": "^1.125.0",
+    "gif.js": "^0.2.0",
+    "libgif": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/gif.js": "^0.2.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
