feat:添加camera track支持

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - 'packages/core'
-  - 'packages/animations'
-  - 'packages/app'
-  - 'packages/examples'
+  - "packages/core"
+  - "packages/animations"
+  - "packages/app"
+  - "packages/examples"
