--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hztx/core": "workspace:^",
+    "@hztx/animations": "workspace:^",
     "animejs": "3.2.2",
     "antd": "^5.23.0",
     "ccapture.js": "^1.1.0",
