--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
-    "@hztx/core": "workspace:^",
     "@hztx/animations": "workspace:^",
+    "@hztx/core": "workspace:^",
     "animejs": "3.2.2",
     "antd": "^5.23.0",
     "ccapture.js": "^1.1.0",
     "cesium": "^1.125.0",
+    "fabric": "^6.5.4",
     "gif.js": "^0.2.0",
     "html2canvas": "^1.4.1",
     "libgif": "^0.0.3",
