--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@tailwindcss/vite": "^4.0.8",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.1"
   },
@@ -23,11 +25,15 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "less": "^4.2.2",
+    "postcss": "^8.5.3",
+    "sass": "^1.85.0",
+    "tailwindcss": "^4.0.8",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
