--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
