--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
