--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@tailwindcss/vite": "^4.0.8",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
