--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.2",
     "@tailwindcss/vite": "^4.0.8",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@hztx/core": "workspace:^",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
@@ -22,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
