--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-static-copy": "^2.2.0"
   },
   "dependencies": {
-    "cesium": "^1.125.0"
+    "cesium": "^1.125.0",
+    "uuid": "^11.1.0"
   }
 }
