--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,10 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc --noEmit && vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "lint": "eslint --ext .ts,.tsx src",
+    "lint:fix": "eslint --fix --ext .ts,.tsx src",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,scss,json,md}\""
   },
   "keywords": [],
   "author": "",
