--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.1",
-    "vite-plugin-static-copy": "^2.2.0"
+    "vite-plugin-static-copy": "^2.2.0",
+    "wellknown": "^0.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
