--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -25,9 +26,9 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.1",
-    "zustand": "^5.0.3",
     "vite-plugin-static-copy": "^2.2.0",
-    "wellknown": "^0.5.0"
+    "wellknown": "^0.5.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
